done block and inline

--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      button {
+        font-size: 28px;
+        font-family: Helvetica, Times New Roman, sans-serif;
+      }
+      .click {
+        background-color: black;
+        color: white;
+      }
+      .no-click {
+        background-color: yellow;
+      }
+    </style>
   </head>
+
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="click">Click Me!</button>
+    <button class="no-click">No, Click Me!</button>
   </body>
 </html>
