--- a/foundations/intro-to-css/04-chaining-selectors/index.html
+++ b/foundations/intro-to-css/04-chaining-selectors/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaining Selectors</title>
     <link rel="stylesheet" href="style.css">
+
+    <style>
+      .avatar.proportioned {
+        width: 300px;
+        height: auto;
+      }
+      .avatar.distorted {
+        width: 200px;
+        height: 400px;
+      }
+    </style>
   </head>
+
   <body>
     <!-- Use the classes BELOW this line -->
     <div>
